--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <header class="header">
         <div class="container">
-            <img class="logo" src="assets/img/dark-logo-torcedor-real.svg" alt="Logo Torcedor Real" width="99" height="70" />
+            <img class="logo" src="assets/img/dark-logo-clubistacampeao-1.0.svg" alt="Logo Torcedor Real" width="99" height="70" />
             <div class="menu-container">
                 <nav>
                     <a href="saiba-mais.html" target="_blank">Saiba mais</a>
