cria modal do carrinho cart-with-products

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         <img src="assets/img/produtos/corinthias-tshirt.jpeg" alt="Camisa corinthias" width="196" height="120"/>
                         <div class="card-content">
                             <h3>Corinthias</h3>
-                            <p class="card-price">R$ 99,90</p>
+                            <p class="price">R$ 99,90</p>
                             <p>Camisa Corinthians I 21/22 s/n° Torcedor Nike Masculina - Branco+Preto</p>
                             <button class="btn btn-main btn-block">Comprar</button>
                         </div>
@@ -46,7 +46,7 @@
                         <img src="assets/img/produtos/corinthias-tshirt.jpeg" alt="Camisa corinthias" width="196" height="120"/>
                         <div class="card-content">
                             <h3>Corinthias</h3>
-                            <p class="card-price">R$ 99,90</p>
+                            <p class="price">R$ 99,90</p>
                             <p>Camisa Corinthians I 21/22 s/n° Torcedor Nike Masculina - Branco+Preto</p>
                             <button class="btn btn-main btn-block">Comprar</button>
                         </div>
@@ -55,7 +55,7 @@
                         <img src="assets/img/produtos/corinthias-tshirt.jpeg" alt="Camisa corinthias" width="196" height="120"/>
                         <div class="card-content">
                             <h3>Corinthias</h3>
-                            <p class="card-price">R$ 99,90</p>
+                            <p class="price">R$ 99,90</p>
                             <p>Camisa Corinthians I 21/22 s/n° Torcedor Nike Masculina - Branco+Preto</p>
                             <button class="btn btn-main btn-block">Comprar</button>
                         </div>
@@ -64,7 +64,7 @@
                         <img src="assets/img/produtos/corinthias-tshirt.jpeg" alt="Camisa corinthias" width="196" height="120"/>
                         <div class="card-content">
                             <h3>Corinthias</h3>
-                            <p class="card-price">R$ 99,90</p>
+                            <p class="price">R$ 99,90</p>
                             <p>Camisa Corinthians I 21/22 s/n° Torcedor Nike Masculina - Branco+Preto</p>
                             <button class="btn btn-main btn-block">Comprar</button>
                         </div>
@@ -73,7 +73,7 @@
                         <img src="assets/img/produtos/corinthias-tshirt.jpeg" alt="Camisa corinthias" width="196" height="120"/>
                         <div class="card-content">
                             <h3>Corinthias</h3>
-                            <p class="card-price">R$ 99,90</p>
+                            <p class="price">R$ 99,90</p>
                             <p>Camisa Corinthians I 21/22 s/n° Torcedor Nike Masculina - Branco+Preto</p>
                             <button class="btn btn-main btn-block">Comprar</button>
                         </div>
@@ -82,7 +82,7 @@
                         <img src="assets/img/produtos/corinthias-tshirt.jpeg" alt="Camisa corinthias" width="196" height="120"/>
                         <div class="card-content">
                             <h3>Corinthias</h3>
-                            <p class="card-price">R$ 99,90</p>
+                            <p class="price">R$ 99,90</p>
                             <p>Camisa Corinthians I 21/22 s/n° Torcedor Nike Masculina - Branco+Preto</p>
                             <button class="btn btn-main btn-block">Comprar</button>
                         </div>
@@ -97,18 +97,33 @@
             (81) 99999-9999
         </a>
     </footer>
-    <!-- cart-sidebar and empty-cart (sacola vazia)
     <aside class="cart-sidebar">
         <button id="btn-close-cart">
             <i class="fas fa-times"></i>
         </button>
-        <div id="empty-cart">
+        <!-- <div id="empty-cart">
             <i class="fas fa-suitcase-rolling"></i>
             <p class="h2">Sua sacola está vazia</p>
+        </div> -->
+        <div id="cart-with-products">
+            <p class="h2">Resumo do pedido:</p>
+            <ul>
+                <li class="cart-item">
+                    <img src="assets/img/produtos/corinthias-tshirt.jpeg" alt="Camisa corinthias" width="70" height="70"/>
+                    <p class="h3">Corinthians</p>
+                    <p class="price">R$ 99,90</p>
+                    <input type="number" min="0" value="1">
+                    <button>
+                        <i class="fas fa-trash-alt"></i>
+                    </button>
+                    
+                </li>
+            </ul>    
         </div>
 
 
-    </aside> -->
+
+    </aside>
     <script src="./script.js"></script>
 </body>
 </html>
