adicionado estilos ao cart-side-bar

--- a/index.html
+++ b/index.html
@@ -101,10 +101,10 @@
         <button id="btn-close-cart">
             <i class="fas fa-times"></i>
         </button>
-        <!-- <div id="empty-cart">
+        <div id="empty-cart">
             <i class="fas fa-suitcase-rolling"></i>
             <p class="h2">Sua sacola está vazia</p>
-        </div> -->
+        </div>
         <div id="cart-with-products">
             <p class="h2">Resumo do pedido:</p>
             <ul>
@@ -120,10 +120,10 @@
                 </li>
             </ul>    
         </div>
-
-
-
     </aside>
+
+
+
     <script src="./script.js"></script>
 </body>
 </html>
