--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             (81) 99999-9999
         </a>
     </footer>
-    <aside class="cart-sidebar">
+    <!-- <aside class="cart-sidebar">
         <button id="btn-close-cart">
             <i class="fas fa-times"></i>
         </button>
@@ -119,7 +119,7 @@
                     
                 </li>
             </ul>    
-        </div>
+        </div> -->
     </aside>
 
 
