finaliza modal + css hover btn

--- a/index.html
+++ b/index.html
@@ -130,6 +130,106 @@
                         <i class="fas fa-trash-alt"></i>
                     </button>       
                 </li>
+                <li class="cart-item">
+                    <img src="assets/img/produtos/corinthias-tshirt.jpeg" alt="Camisa corinthias" width="70" height="70"/>
+                    <div>
+                        <p class="h3">Corinthians</p>
+                        <p class="price">R$ 99,90</p>
+                    </div>
+                    <input class="form-input" type="number" min="0" value="1">
+                    <button>
+                        <i class="fas fa-trash-alt"></i>
+                    </button>       
+                </li>
+                <li class="cart-item">
+                    <img src="assets/img/produtos/corinthias-tshirt.jpeg" alt="Camisa corinthias" width="70" height="70"/>
+                    <div>
+                        <p class="h3">Corinthians</p>
+                        <p class="price">R$ 99,90</p>
+                    </div>
+                    <input class="form-input" type="number" min="0" value="1">
+                    <button>
+                        <i class="fas fa-trash-alt"></i>
+                    </button>       
+                </li>
+                <li class="cart-item">
+                    <img src="assets/img/produtos/corinthias-tshirt.jpeg" alt="Camisa corinthias" width="70" height="70"/>
+                    <div>
+                        <p class="h3">Corinthians</p>
+                        <p class="price">R$ 99,90</p>
+                    </div>
+                    <input class="form-input" type="number" min="0" value="1">
+                    <button>
+                        <i class="fas fa-trash-alt"></i>
+                    </button>       
+                </li>
+                <li class="cart-item">
+                    <img src="assets/img/produtos/corinthias-tshirt.jpeg" alt="Camisa corinthias" width="70" height="70"/>
+                    <div>
+                        <p class="h3">Corinthians</p>
+                        <p class="price">R$ 99,90</p>
+                    </div>
+                    <input class="form-input" type="number" min="0" value="1">
+                    <button>
+                        <i class="fas fa-trash-alt"></i>
+                    </button>       
+                </li>
+                <li class="cart-item">
+                    <img src="assets/img/produtos/corinthias-tshirt.jpeg" alt="Camisa corinthias" width="70" height="70"/>
+                    <div>
+                        <p class="h3">Corinthians</p>
+                        <p class="price">R$ 99,90</p>
+                    </div>
+                    <input class="form-input" type="number" min="0" value="1">
+                    <button>
+                        <i class="fas fa-trash-alt"></i>
+                    </button>       
+                </li>
+                <li class="cart-item">
+                    <img src="assets/img/produtos/corinthias-tshirt.jpeg" alt="Camisa corinthias" width="70" height="70"/>
+                    <div>
+                        <p class="h3">Corinthians</p>
+                        <p class="price">R$ 99,90</p>
+                    </div>
+                    <input class="form-input" type="number" min="0" value="1">
+                    <button>
+                        <i class="fas fa-trash-alt"></i>
+                    </button>       
+                </li>
+                <li class="cart-item">
+                    <img src="assets/img/produtos/corinthias-tshirt.jpeg" alt="Camisa corinthias" width="70" height="70"/>
+                    <div>
+                        <p class="h3">Corinthians</p>
+                        <p class="price">R$ 99,90</p>
+                    </div>
+                    <input class="form-input" type="number" min="0" value="1">
+                    <button>
+                        <i class="fas fa-trash-alt"></i>
+                    </button>       
+                </li>
+                <li class="cart-item">
+                    <img src="assets/img/produtos/corinthias-tshirt.jpeg" alt="Camisa corinthias" width="70" height="70"/>
+                    <div>
+                        <p class="h3">Corinthians</p>
+                        <p class="price">R$ 99,90</p>
+                    </div>
+                    <input class="form-input" type="number" min="0" value="1">
+                    <button>
+                        <i class="fas fa-trash-alt"></i>
+                    </button>       
+                </li>
+                <li class="cart-item">
+                    <img src="assets/img/produtos/corinthias-tshirt.jpeg" alt="Camisa corinthias" width="70" height="70"/>
+                    <div>
+                        <p class="h3">Corinthians</p>
+                        <p class="price">R$ 99,90</p>
+                    </div>
+                    <input class="form-input" type="number" min="0" value="1">
+                    <button>
+                        <i class="fas fa-trash-alt"></i>
+                    </button>       
+                </li>
+                
             </ul>
             <div class="cart-total">
                 <p class="h2">Total</p>
