adiciona funcao JS openSidebar e closSidebar

--- a/index.html
+++ b/index.html
@@ -235,13 +235,10 @@
                 <p class="h2">Total</p>
                 <p>R$ 299,80</p>
             </div>
-                <button class="btn btn-main-outline btn-block">Adicionar mais itens</button>
+                <button class="btn btn-main-outline btn-block" id="add-more">Adicionar mais itens</button>
                 <button class="btn btn-main btn-block">Fazer pedido</button>
         </div>
     </aside>
-
-
-
     <script src="./script.js"></script>
 </body>
 </html>
