--- a/index.html
+++ b/index.html
@@ -30,7 +30,10 @@
     </header>
     <main class="container">
         <h1>Escolha seu manto</h1>
-        <section>
+        <div id="groups-root">
+
+        </div>
+        <!-- <section>
             <h2>Camisas</h2>
             <div class="products-grid">
                     <article class="card">
@@ -88,7 +91,7 @@
                         </div>
                     </article>
             </div>    
-    </section>
+    </section> -->
     </main>
     <footer class="footer">
         <p> Dúvidas? Chama lá Whatsapp Artilheiro!</p>
