busca produtos da nossa API

--- a/index.html
+++ b/index.html
@@ -31,67 +31,8 @@
     <main class="container">
         <h1>Escolha seu manto</h1>
         <div id="groups-root">
-
+            <i class="fas fa-circle-notch loading-products"></i>
         </div>
-        <!-- <section>
-            <h2>Camisas</h2>
-            <div class="products-grid">
-                    <article class="card">
-                        <img src="assets/img/produtos/corinthias-tshirt.jpeg" alt="Camisa corinthias" width="196" height="120"/>
-                        <div class="card-content">
-                            <h3>Corinthias</h3>
-                            <p class="price">R$ 99,90</p>
-                            <p>Camisa Corinthians I 21/22 s/n° Torcedor Nike Masculina - Branco+Preto</p>
-                            <button class="btn btn-main btn-block">Comprar</button>
-                        </div>
-                    </article>
-                    <article class="card">
-                        <img src="assets/img/produtos/corinthias-tshirt.jpeg" alt="Camisa corinthias" width="196" height="120"/>
-                        <div class="card-content">
-                            <h3>Corinthias</h3>
-                            <p class="price">R$ 99,90</p>
-                            <p>Camisa Corinthians I 21/22 s/n° Torcedor Nike Masculina - Branco+Preto</p>
-                            <button class="btn btn-main btn-block">Comprar</button>
-                        </div>
-                    </article>
-                    <article class="card">
-                        <img src="assets/img/produtos/corinthias-tshirt.jpeg" alt="Camisa corinthias" width="196" height="120"/>
-                        <div class="card-content">
-                            <h3>Corinthias</h3>
-                            <p class="price">R$ 99,90</p>
-                            <p>Camisa Corinthians I 21/22 s/n° Torcedor Nike Masculina - Branco+Preto</p>
-                            <button class="btn btn-main btn-block">Comprar</button>
-                        </div>
-                    </article>
-                    <article class="card">
-                        <img src="assets/img/produtos/corinthias-tshirt.jpeg" alt="Camisa corinthias" width="196" height="120"/>
-                        <div class="card-content">
-                            <h3>Corinthias</h3>
-                            <p class="price">R$ 99,90</p>
-                            <p>Camisa Corinthians I 21/22 s/n° Torcedor Nike Masculina - Branco+Preto</p>
-                            <button class="btn btn-main btn-block">Comprar</button>
-                        </div>
-                    </article>
-                    <article class="card">
-                        <img src="assets/img/produtos/corinthias-tshirt.jpeg" alt="Camisa corinthias" width="196" height="120"/>
-                        <div class="card-content">
-                            <h3>Corinthias</h3>
-                            <p class="price">R$ 99,90</p>
-                            <p>Camisa Corinthians I 21/22 s/n° Torcedor Nike Masculina - Branco+Preto</p>
-                            <button class="btn btn-main btn-block">Comprar</button>
-                        </div>
-                    </article>
-                    <article class="card">
-                        <img src="assets/img/produtos/corinthias-tshirt.jpeg" alt="Camisa corinthias" width="196" height="120"/>
-                        <div class="card-content">
-                            <h3>Corinthias</h3>
-                            <p class="price">R$ 99,90</p>
-                            <p>Camisa Corinthians I 21/22 s/n° Torcedor Nike Masculina - Branco+Preto</p>
-                            <button class="btn btn-main btn-block">Comprar</button>
-                        </div>
-                    </article>
-            </div>    
-    </section> -->
     </main>
     <footer class="footer">
         <p> Dúvidas? Chama lá Whatsapp Artilheiro!</p>
