--- a/index.html
+++ b/index.html
@@ -45,139 +45,16 @@
         <button id="btn-close-cart">
             <i class="fas fa-times"></i>
         </button>
-        <!-- <div id="empty-cart">
+        <div id="empty-cart">
             <i class="fas fa-suitcase-rolling"></i>
             <p class="h2">Sua sacola está vazia</p>
-        </div> -->
+        </div>
         <div id="cart-with-products">
             <p class="h2">Resumo do pedido:</p>
-            <ul>
-                <li class="cart-item">
-                    <img src="assets/img/produtos/corinthias-tshirt.jpeg" alt="Camisa corinthias" width="70" height="70"/>
-                    <div>
-                        <p class="h3">Corinthians</p>
-                        <p class="price">R$ 99,90</p>
-                    </div>
-                    <input class="form-input" type="number" min="0" value="1">
-                    <button>
-                        <i class="fas fa-trash-alt"></i>
-                    </button>       
-                </li>
-                <li class="cart-item">
-                    <img src="assets/img/produtos/corinthias-tshirt.jpeg" alt="Camisa corinthias" width="70" height="70"/>
-                    <div>
-                        <p class="h3">Corinthians</p>
-                        <p class="price">R$ 99,90</p>
-                    </div>
-                    <input class="form-input" type="number" min="0" value="1">
-                    <button>
-                        <i class="fas fa-trash-alt"></i>
-                    </button>       
-                </li>
-                <li class="cart-item">
-                    <img src="assets/img/produtos/corinthias-tshirt.jpeg" alt="Camisa corinthias" width="70" height="70"/>
-                    <div>
-                        <p class="h3">Corinthians</p>
-                        <p class="price">R$ 99,90</p>
-                    </div>
-                    <input class="form-input" type="number" min="0" value="1">
-                    <button>
-                        <i class="fas fa-trash-alt"></i>
-                    </button>       
-                </li>
-                <li class="cart-item">
-                    <img src="assets/img/produtos/corinthias-tshirt.jpeg" alt="Camisa corinthias" width="70" height="70"/>
-                    <div>
-                        <p class="h3">Corinthians</p>
-                        <p class="price">R$ 99,90</p>
-                    </div>
-                    <input class="form-input" type="number" min="0" value="1">
-                    <button>
-                        <i class="fas fa-trash-alt"></i>
-                    </button>       
-                </li>
-                <li class="cart-item">
-                    <img src="assets/img/produtos/corinthias-tshirt.jpeg" alt="Camisa corinthias" width="70" height="70"/>
-                    <div>
-                        <p class="h3">Corinthians</p>
-                        <p class="price">R$ 99,90</p>
-                    </div>
-                    <input class="form-input" type="number" min="0" value="1">
-                    <button>
-                        <i class="fas fa-trash-alt"></i>
-                    </button>       
-                </li>
-                <li class="cart-item">
-                    <img src="assets/img/produtos/corinthias-tshirt.jpeg" alt="Camisa corinthias" width="70" height="70"/>
-                    <div>
-                        <p class="h3">Corinthians</p>
-                        <p class="price">R$ 99,90</p>
-                    </div>
-                    <input class="form-input" type="number" min="0" value="1">
-                    <button>
-                        <i class="fas fa-trash-alt"></i>
-                    </button>       
-                </li>
-                <li class="cart-item">
-                    <img src="assets/img/produtos/corinthias-tshirt.jpeg" alt="Camisa corinthias" width="70" height="70"/>
-                    <div>
-                        <p class="h3">Corinthians</p>
-                        <p class="price">R$ 99,90</p>
-                    </div>
-                    <input class="form-input" type="number" min="0" value="1">
-                    <button>
-                        <i class="fas fa-trash-alt"></i>
-                    </button>       
-                </li>
-                <li class="cart-item">
-                    <img src="assets/img/produtos/corinthias-tshirt.jpeg" alt="Camisa corinthias" width="70" height="70"/>
-                    <div>
-                        <p class="h3">Corinthians</p>
-                        <p class="price">R$ 99,90</p>
-                    </div>
-                    <input class="form-input" type="number" min="0" value="1">
-                    <button>
-                        <i class="fas fa-trash-alt"></i>
-                    </button>       
-                </li>
-                <li class="cart-item">
-                    <img src="assets/img/produtos/corinthias-tshirt.jpeg" alt="Camisa corinthias" width="70" height="70"/>
-                    <div>
-                        <p class="h3">Corinthians</p>
-                        <p class="price">R$ 99,90</p>
-                    </div>
-                    <input class="form-input" type="number" min="0" value="1">
-                    <button>
-                        <i class="fas fa-trash-alt"></i>
-                    </button>       
-                </li>
-                <li class="cart-item">
-                    <img src="assets/img/produtos/corinthias-tshirt.jpeg" alt="Camisa corinthias" width="70" height="70"/>
-                    <div>
-                        <p class="h3">Corinthians</p>
-                        <p class="price">R$ 99,90</p>
-                    </div>
-                    <input class="form-input" type="number" min="0" value="1">
-                    <button>
-                        <i class="fas fa-trash-alt"></i>
-                    </button>       
-                </li>
-                <li class="cart-item">
-                    <img src="assets/img/produtos/corinthias-tshirt.jpeg" alt="Camisa corinthias" width="70" height="70"/>
-                    <div>
-                        <p class="h3">Corinthians</p>
-                        <p class="price">R$ 99,90</p>
-                    </div>
-                    <input class="form-input" type="number" min="0" value="1">
-                    <button>
-                        <i class="fas fa-trash-alt"></i>
-                    </button>       
-                </li>
-                
-            </ul>
+            <ul></ul>
             <div class="cart-total">
                 <p class="h2">Total</p>
-                <p>R$ 299,80</p>
+                <p id="cart-total-value"></p>
             </div>
                 <button class="btn btn-main-outline btn-block" id="add-more">Adicionar mais itens</button>
                 <button class="btn btn-main btn-block">Fazer pedido</button>
