finalizar pedido do carrinho

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <p id="cart-total-value"></p>
             </div>
                 <button class="btn btn-main-outline btn-block" id="add-more">Adicionar mais itens</button>
-                <button class="btn btn-main btn-block">Fazer pedido</button>
+                <a href="fazer-pedido.html" class="btn btn-main btn-block">Fazer pedido</a>
         </div>
     </aside>
     <script src="./script.js"></script>
