implementa accordion bootstrap

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <header class="header">
         <div class="container">
-            <img class="logo" src="assets/img/dark-logo-clubistacampeao-1.0.svg" alt="Logo Torcedor Real" width="99" height="70" />
+            <img class="logo" src="assets/img/dark-logo-clubistacampeao-1.0.svg" alt="Logo Clubista Campeao" width="99" height="70" />
             <div class="menu-container">
                 <nav>
                     <a href="saiba-mais.html" target="_blank">Saiba mais</a>
@@ -36,7 +36,7 @@
     </main>
     <footer class="footer">
         <p> Dúvidas? Chama lá Whatsapp Artilheiro!</p>
-        <a href="https://api.whatsapp.com/send?phone=5581999999999&text=Ol%C3%A1,%20gostaria%20de%20uma%20pizza" target="_blank">
+        <a href="https://api.whatsapp.com/send?phone=5581999999999&text=Ol%C3%A1,%20gostaria%20de%20uma%20camisa" target="_blank">
             <i class="fab fa-whatsapp-square"></i>
             (81) 99999-9999
         </a>
